# syften_ingress

./: .dockerignore  .gitignore  README.md
dispatch/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
ingest/: Dockerfile  README.md  main.py  pyproject.toml
